Salesforce/force-app/main/default/objects/ACN_ABN_Search_Setting__mdt/ACN_ABN_Search_Setting__mdt.object-meta.xml
<CustomObject>
    <label>ACN ABN Search Setting</label>
    <pluralLabel>ACN ABN Search Settings</pluralLabel>
</CustomObject>