Salesforce/force-app/main/default/objects/ACN_ABN_Search_Setting__mdt/fields/ABN_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>ABN_Endpoint__c</fullName>
    <description>Endpoint url for ABN search</description>
    <inlineHelpText>Endpoint url for ABN search</inlineHelpText>
    <label>ABN Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>