Salesforce/force-app/main/default/objects/ACN_ABN_Search_Setting__mdt/fields/ACN_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>ACN_Endpoint__c</fullName>
    <description>Endpoint url for ACN search</description>
    <inlineHelpText>Endpoint url for ACN search</inlineHelpText>
    <label>ACN Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>