Salesforce/force-app/main/default/objects/ACN_ABN_Search_Setting__mdt/fields/Authentication_Code__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Code__c</fullName>
    <label>Authentication Code</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>