Salesforce/force-app/main/default/objects/ACN_ABN_Search_Setting__mdt/fields/Include_Historical_Details__c.field-meta.xml
<CustomField>
    <fullName>Include_Historical_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Historical Details</label>
    <type>Checkbox</type>
</CustomField>